properities with aws rds update